--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=http://localhost:8999/api/v1
+VITE_API_URL=http://localhost:3000/api
 
 # App Configuration
 VITE_APP_NAME=Nimbus Dashboard
